[tool.poetry]
name = "confluence-bot"
version = "0.1.0"
description = "Confluence — verified, no-fluff markets bot (stocks & crypto)"
authors = ["Contributors <devnull@example.com>"]
readme = "README.md"
packages = [{ include = "confluence" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = {version = "^0.27.0", extras=["http2"]}
websockets = "^12.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
pandas-ta = "^0.3.14b0"
scikit-learn = "^1.5.0"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
SQLAlchemy = "^2.0.31"
aiosqlite = "^0.20.0"
apscheduler = "^3.10.4"
fastapi = "^0.111.0"
uvicorn = {version = "^0.30.1", extras=["standard"]}
python-dotenv = "^1.0.1"
keyring = "^25.2.1"
aiolimiter = "^1.1.0"
tenacity = "^8.3.0"
email-validator = "^2.1.1"
jinja2 = "^3.1.4"
plotly = {version = "^5.22.0", optional = true}
aiosmtplib = "^3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
black = "^24.4.2"
types-requests = "^2.32.0.20240622"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

